updating main code

--- a/covid_behavior_analysis_lean.ipynb
+++ b/covid_behavior_analysis_lean.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "\n",
     "# path = os.getcwd()\n",
-    "path = '/Users/tamannaurmi/Documents/Research/behavior_covid_states'\n",
+    "path = '/Users/tamannaurmi/Documents/Research/behavior_covid'\n",
     "path_processed = path + '/data/processed'"
    ]
   },
@@ -174,6 +174,15 @@
     "    mape = (1/len(y_test))*(sum(abs((y_test - y_pred)/(y_test+0.000001))))\n",
     "    \n",
     "    return m, c, mae, mse, mape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_processed"
    ]
   },
   {
@@ -980,10 +989,10 @@
     "\n",
     "            if col == 'g':\n",
     "                # axes[b, 2].plot(dates_lin[0:-6], ban[6:], color = 'lightgreen', linewidth= 2, linestyle = '--')\n",
-    "                axes[b, 2].plot(np.nan, color = 'g', label = 'Behavior anomaly \\n (risk-seeking)') ## no data, this is added only to combine two legends\n",
+    "                axes[b, 2].plot(np.nan, color = 'g', label = 'Oscillations in behavior trend \\n (risk-seeking)') ## no data, this is added only to combine two legends\n",
     "                # axes[b, 2].plot(np.nan, color = 'lightgreen', label = 'Behavior anomaly \\n 6-month shifted')\n",
     "            elif col == 'darkorange':\n",
-    "                axes[b, 2].plot(np.nan, color = 'orange', label = 'Behavior anomaly \\n (risk-averting)') ## no data, this is added only to combine two legends\n",
+    "                axes[b, 2].plot(np.nan, color = 'orange', label = 'Oscillations in behavior trend \\n (risk-averting)') ## no data, this is added only to combine two legends\n",
     "\n",
     "            if len(behavior) < 30:\n",
     "                axes[b, 2].set_title(behavior, fontsize = titlefont, wrap = True)\n",
@@ -1081,6 +1090,15 @@
     "    plt.savefig(newpath + location+'_param_table.png', bbox_inches='tight')\n",
     "\n",
     "    # break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newpath"
    ]
   },
   {
@@ -1205,7 +1223,6 @@
     "    \n",
     "    # Combine and save images as a PDF\n",
     "    combine_images_into_pdf(figure1, figure2, figure3, table, output_pdf_path)\n",
-    "    \n",
     "\n",
     "\n",
     "def combine_pdfs(pdf_list, output_path):\n",
@@ -1224,11 +1241,356 @@
     "# Combine all the generated PDFs into a single PDF\n",
     "combine_pdfs(output_pdf_paths, combined_output_pdf_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image, ImageDraw\n",
+    "from PyPDF2 import PdfReader, PdfWriter\n",
+    "\n",
+    "# List to store each generated PDF's path\n",
+    "img_list = []\n",
+    "\n",
+    "# Combine the figure and table into one PDF\n",
+    "def combine_images_into_pdf(image1, image2, image3, table_img, output_pdf_path):\n",
+    "    # Compress the images (adjust quality as needed)\n",
+    "    image1 = compress_image(image1)\n",
+    "    image2 = compress_image(image2)\n",
+    "    image3 = compress_image(image3)\n",
+    "    table_img = compress_image(table_img)\n",
+    "    \n",
+    "    # Get the maximum height of the images to align them vertically\n",
+    "    max_height = max(image1.height, image2.height, image3.height)\n",
+    "\n",
+    "    line_width = 2  # Adjust the line width as needed\n",
+    "    line_color = (0, 0, 0)  # Black color for the dividing line\n",
+    "\n",
+    "    # Calculate the combined width, accounting for the lines between images\n",
+    "    combined_width = image1.width + image2.width + image3.width + (2 * line_width)\n",
+    "\n",
+    "    combined_image = Image.new('RGB', (combined_width, max_height))\n",
+    "\n",
+    "    # Create a draw object to add lines\n",
+    "    draw = ImageDraw.Draw(combined_image)\n",
+    "\n",
+    "    # Calculate the offset for the line height\n",
+    "    line_height = int(max_height * 0.8)  # 80% of the image height\n",
+    "    vertical_offset = (max_height - line_height) // 2  # Center the line vertically\n",
+    "\n",
+    "    # Paste the first image\n",
+    "    combined_image.paste(image1, (0, 0))\n",
+    "\n",
+    "    # Draw the first dividing line between image1 and image2, with the offset height\n",
+    "    draw.line([(image1.width, vertical_offset), (image1.width, vertical_offset + line_height)], fill=line_color, width=line_width)\n",
+    "\n",
+    "    # Paste the second image after the first image and the line\n",
+    "    combined_image.paste(image2, (image1.width + line_width, 0))\n",
+    "\n",
+    "    # Draw the second dividing line between image2 and image3, with the offset height\n",
+    "    draw.line([(image1.width + image2.width + line_width, vertical_offset), (image1.width + image2.width + line_width, vertical_offset + line_height)], fill=line_color, width=line_width)\n",
+    "\n",
+    "    # Paste the third image after the second image and the line\n",
+    "    combined_image.paste(image3, (image1.width + image2.width + 2 * line_width, 0))\n",
+    "\n",
+    "    # Save the combined image\n",
+    "    fig_img = combined_image\n",
+    "\n",
+    "    # Combine plot and table\n",
+    "    # Determine the width and total height needed for the combined image\n",
+    "    max_width = max(fig_img.width, table_img.width)\n",
+    "    total_height = fig_img.height + table_img.height\n",
+    "\n",
+    "    # Create a blank image with the calculated dimensions\n",
+    "    combined_image = Image.new('RGB', (max_width, total_height), (255, 255, 255))\n",
+    "\n",
+    "    # Paste the figure and table images into the combined image\n",
+    "    combined_image.paste(fig_img, (0, 0))\n",
+    "    combined_image.paste(table_img, (0, fig_img.height))\n",
+    "    \n",
+    "    # Save as PDF with specified resolution\n",
+    "    combined_image.save(output_pdf_path, \"PDF\", resolution=100.0)\n",
+    "\n",
+    "def compress_image(image):\n",
+    "    \"\"\"\n",
+    "    Compress the given image by adjusting quality and optimizing it.\n",
+    "    \"\"\"\n",
+    "    compressed_image = Image.new('RGB', image.size)\n",
+    "    compressed_image.paste(image)\n",
+    "    return compressed_image\n",
+    "\n",
+    "output_pdf_paths = []\n",
+    "for location in location_list:\n",
+    "\n",
+    "    figure1 = Image.open(newpath + location + '_3plots_0.png')\n",
+    "    figure2 = Image.open(newpath + location + '_3plots_1.png')\n",
+    "    figure3 = Image.open(newpath + location + '_3plots_2.png')\n",
+    "    table = Image.open(newpath + location + '_param_table.png')\n",
+    "\n",
+    "    # Define the output PDF path\n",
+    "    output_pdf_path = newpath + location + '_param_fig_tbl.pdf'\n",
+    "    output_pdf_paths.append(output_pdf_path)\n",
+    "    \n",
+    "    # Combine and save images as a PDF\n",
+    "    combine_images_into_pdf(figure1, figure2, figure3, table, output_pdf_path)\n",
+    "\n",
+    "def combine_pdfs(pdf_list, output_path):\n",
+    "    pdf_writer = PdfWriter()\n",
+    "    for pdf in pdf_list:\n",
+    "        pdf_reader = PdfReader(pdf)\n",
+    "        for page_num in range(len(pdf_reader.pages)):\n",
+    "            page = pdf_reader.pages[page_num]\n",
+    "            pdf_writer.add_page(page)\n",
+    "    with open(output_path, 'wb') as output_pdf:\n",
+    "        pdf_writer.write(output_pdf)\n",
+    "\n",
+    "# Define the output combined PDF path\n",
+    "combined_output_pdf_path = newpath + '/supp_compressed_fig_tbl_combined.pdf'\n",
+    "\n",
+    "# Combine all the generated PDFs into a single PDF\n",
+    "combine_pdfs(output_pdf_paths, combined_output_pdf_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newpath"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Supplementary: Correlations with death, cases and hospitalizations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.gridspec as gridspec\n",
+    "newpath = path + '/behavior_anom_and_death_hospit_corr_lags'\n",
+    "\n",
+    "lags = [-2, -1, 0, 1, 2]\n",
+    "\n",
+    "interval = 30\n",
+    "# location_list = []\n",
+    "location_list = list(state_code_list.State.values)\n",
+    "location_list.append('National')\n",
+    "death_agg = death_agg_dt\n",
+    "case_nat = offc_st_df[['mnth_yr', 'case_cnt_norm']].groupby('mnth_yr').sum().reset_index()\n",
+    "\n",
+    "for location in location_list:\n",
+    "    dlag_corr = pd.DataFrame()\n",
+    "    dlag_corr.index = lags\n",
+    "    clag_corr = pd.DataFrame()\n",
+    "    clag_corr.index = lags\n",
+    "    hlag_corr = pd.DataFrame()\n",
+    "    hlag_corr.index = lags\n",
+    "    fig, ax = plt.subplots(figsize = (5, 10))\n",
+    "\n",
+    "    for i in range(len(behaviors)):\n",
+    "        # print(\"1\", location)\n",
+    "        behavior = behaviors[i]\n",
+    "        dt0 = death_behavior_loc_wvend(death_agg, location, behavior, interval)\n",
+    "        dt = dt0[dt0.end_date.isin(_monthly_lin)]\n",
+    "        if location == 'National':\n",
+    "            loc = 'National'\n",
+    "        else:\n",
+    "            loc = state_to_code.get(location)\n",
+    "\n",
+    "        dates = dt['end_date'].values\n",
+    "        dates_int = list(range(len(dates)))\n",
+    "\n",
+    "        death = dt['death_pct'].values\n",
+    "        behvr = dt[behavior].values\n",
+    "        be_an = dt['behavior_anomaly'].values\n",
+    "\n",
+    "        hosp_yr_month = [datetime.strptime(date, '%Y-%m-%d').strftime('%Y-%m') for date in _monthly_lin]\n",
+    "        hospt_dt = hospit_df[(hospit_df.mnth_yr.isin(hosp_yr_month)) & (hospit_df['state_code']== loc)]\n",
+    "        # print(len(hospt_dt))\n",
+    "        \n",
+    "        # display(hospt_dt)\n",
+    "        dt['mnth_yr'] = dt['end_date'].apply(lambda row: datetime.strptime(row, '%Y-%m-%d').strftime('%Y-%m'))\n",
+    "        hospt_beh_anom = pd.merge(hospt_dt, dt, how = 'inner', on = 'mnth_yr')\n",
+    "        # display(hospt_beh_anom)\n",
+    "        \n",
+    "\n",
+    "        case_yr_month = [datetime.strptime(date, '%Y-%m-%d').strftime('%Y-%m') for date in _monthly_lin]\n",
+    "        case_dt = offc_st_df[(offc_st_df.mnth_yr.isin(case_yr_month)) & (offc_st_df['state_code'] == loc)]\n",
+    "\n",
+    "        if loc == 'National':\n",
+    "            case_dt = case_nat[case_nat.mnth_yr.isin(case_yr_month)]\n",
+    "        else:\n",
+    "            case_dt = case_dt\n",
+    "        \n",
+    "        dt['mnth_yr'] = dt['end_date'].apply(lambda row: datetime.strptime(row, '%Y-%m-%d').strftime('%Y-%m'))\n",
+    "        case_beh_anom = pd.merge(case_dt, dt, how = 'inner', on = 'mnth_yr')\n",
+    "        # display(case_beh_anom)\n",
+    "\n",
+    "        dates = dt['end_date'].values\n",
+    "        dates_int = list(range(len(dates)))\n",
+    "\n",
+    "        cs = case_dt['case_cnt_norm'].values\n",
+    "        c_be_an = case_beh_anom['behavior_anomaly'].values\n",
+    "\n",
+    "        # display(cs)\n",
+    "        behvr = dt[behavior].values\n",
+    "        be_an = dt['behavior_anomaly'].values\n",
+    "\n",
+    "        hospt = hospt_dt['monthly_hospitalization'].values\n",
+    "        h_be_an = hospt_beh_anom['behavior_anomaly'].values\n",
+    "\n",
+    "        dcorr_ = []\n",
+    "        ccorr_ = []\n",
+    "        hcorr_ = []\n",
+    "            \n",
+    "\n",
+    "        for i in range(len(lags)):\n",
+    "            lag = lags[i]\n",
+    "            if lag >= 0:\n",
+    "                ban_lag = be_an[0:(len(be_an)-lag)].flatten()\n",
+    "                d_lag = death[lag:].flatten()\n",
+    "\n",
+    "                c_ban_lag = c_be_an[lag:].flatten()\n",
+    "                c_lag = cs[lag:].flatten()\n",
+    "\n",
+    "                h_ban_lag = h_be_an[lag:].flatten()\n",
+    "                h_lag = hospt[lag:].flatten()\n",
+    "                dates_seg = dates_int[0:(len(be_an)-lag)]\n",
+    "\n",
+    "            elif lag < 0:\n",
+    "                lag_ = abs(lag)\n",
+    "                ban_lag = be_an[lag_:].flatten()\n",
+    "                d_lag = death[0:(len(death)-lag_)].flatten()\n",
+    "\n",
+    "                c_ban_lag = c_be_an[lag_:].flatten()\n",
+    "                c_lag = cs[0:(len(cs)-lag_)].flatten()\n",
+    "\n",
+    "                h_ban_lag = h_be_an[lag_:].flatten()\n",
+    "                h_lag = hospt[0:len(hospt)-lag_].flatten()\n",
+    "                dates_seg = dates_int[0:(len(death)-lag_)]\n",
+    "            print(ban_lag, c_ban_lag, h_ban_lag)\n",
+    "            dcorr_.append(np.corrcoef(ban_lag, d_lag)[0, 1])\n",
+    "            ccorr_.append(np.corrcoef(c_ban_lag, c_lag)[0, 1])\n",
+    "            hcorr_.append(np.corrcoef(h_ban_lag, h_lag)[0, 1])\n",
+    "            \n",
+    "        dlag_corr[behavior] = dcorr_\n",
+    "        clag_corr[behavior] = ccorr_\n",
+    "        hlag_corr[behavior] = hcorr_\n",
+    "\n",
+    "    sns.heatmap(pd.concat([dlag_corr.T, clag_corr.T, hlag_corr.T], axis = 0), annot = True, cmap = 'coolwarm', annot_kws={'size': 8})\n",
+    "    # sns.heatmap(clag_corr.T, annot = True, cmap = 'coolwarm', annot_kws={'size': 8})\n",
+    "\n",
+    "\n",
+    "    ax.set_xlabel(\"Lag [month]\")\n",
+    "\n",
+    "    ax.set_title(f\"{location} | Oscillations in behavior trend lagged correlations \\n with Deaths, Cases, Hospitalization\", fontsize = 12)\n",
+    "\n",
+    "    # fig.suptitle(\"National level behavior anomaly comparisons \")\n",
+    "    # plt.show()\n",
+    "    # plt.tight_layout()\n",
+    "    # plt.savefig(newpath + '/behavior_anom_&_death_corr_lags_' + location + '.png', bbox_inches='tight')\n",
+    "    plt.savefig(newpath + '/behavior_anom_&_death_case_hospt_corr_lags_short_' + location + '.png', bbox_inches='tight')\n",
+    "    # break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from PIL import Image\n",
+    "from fpdf import FPDF\n",
+    "\n",
+    "# Directory containing the images\n",
+    "image_dir = '/Users/tamannaurmi/Documents/Research/behavior_covid/behavior_anom_and_death_hospit_corr_lags'\n",
+    "\n",
+    "# List of locations (update this list with your actual locations)\n",
+    "locations = location_list  # Replace with your locations\n",
+    "\n",
+    "# Initialize a PDF\n",
+    "pdf = FPDF(orientation='P', unit='mm', format='A4')  # A4 size page (210 x 297 mm)\n",
+    "\n",
+    "# Parameters for image layout\n",
+    "image_width = 90  # Fixed width for each image (adjust based on your need)\n",
+    "image_height = 88  # Fixed height for each image (adjust based on your need)\n",
+    "margin = 10  # Margin between images\n",
+    "\n",
+    "# A4 page size\n",
+    "page_width = 210\n",
+    "page_height = 340\n",
+    "\n",
+    "# Max images per row and column\n",
+    "images_per_row = (page_width - 2 * margin) // image_width\n",
+    "images_per_col = (page_height - 2 * margin) // image_height\n",
+    "\n",
+    "# Loop through the locations and process each image\n",
+    "row, col = 0, 0  # Start at the top-left corner of the page\n",
+    "for location in locations:\n",
+    "    image_name = f\"behavior_anom_&_death_case_hospt_corr_lags_short_{location}.png\"\n",
+    "    image_path = os.path.join(image_dir, image_name)\n",
+    "\n",
+    "    if os.path.exists(image_path):\n",
+    "        if row == 0 and col == 0:\n",
+    "            pdf.add_page()  # Add a new page\n",
+    "\n",
+    "        # Open the image\n",
+    "        img = Image.open(image_path)\n",
+    "\n",
+    "        # Compress the image (adjust quality level as needed)\n",
+    "        compressed_image_path = os.path.join(image_dir, f\"compressed_{image_name}\")\n",
+    "        img.save(compressed_image_path, \"PNG\", optimize=True, quality=85)\n",
+    "\n",
+    "        # Calculate x, y position for the image on the page\n",
+    "        x = margin + col * image_width\n",
+    "        y = margin + row * image_height\n",
+    "\n",
+    "        # Add the image to the PDF\n",
+    "        pdf.image(compressed_image_path, x=x, y=y, w=image_width, h=image_height)\n",
+    "\n",
+    "        # Move to the next position\n",
+    "        col += 1\n",
+    "        if col >= images_per_row:  # If the row is filled, move to the next row\n",
+    "            col = 0\n",
+    "            row += 1\n",
+    "        if row >= images_per_col:  # If the page is filled, add a new page\n",
+    "            row, col = 0, 0\n",
+    "\n",
+    "# Save the final PDF\n",
+    "pdf_output_path = '/Users/tamannaurmi/Documents/Research/behavior_covid/behavior_anom_and_death_hospit_corr_lags/behavior_anom_death_case_hospit_corr_all_state.pdf'\n",
+    "pdf.output(pdf_output_path)\n",
+    "\n",
+    "print(f\"PDF created successfully at {pdf_output_path}\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "graph_tools_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
