--- a/covid_behavior_analysis_lean.ipynb
+++ b/covid_behavior_analysis_lean.ipynb
@@ -880,7 +880,7 @@
     "\n",
     "            axes[b, 0].set_xlabel('Time [month]', fontsize = labelfonts)\n",
     "            ax2.set_ylabel('Behavior adoption [%]', fontsize = labelfonts, color = col)\n",
-    "            axes[b, 0].set_ylabel('Proportion of deaths [%]', fontsize = labelfonts)\n",
+    "            axes[b, 0].set_ylabel('Mortality due to COVID-19 [%]', fontsize = labelfonts)\n",
     "\n",
     "            handles, labels = axes[b, 0].get_legend_handles_labels()\n",
     "\n",
@@ -1032,7 +1032,7 @@
     "            # axes[b, 2].tick_params(axis='y', labelcolor=col)\n",
     "\n",
     "            ax2.set_yticklabels([np.round(elem, 3) for elem in ax2.get_yticks()],fontsize = labelfonts)\n",
-    "            ax2.set_ylabel('Proportion of deaths [%]', fontsize = labelfonts, color = 'black')\n",
+    "            ax2.set_ylabel('Mortality due to COVID-19 [%]', fontsize = labelfonts, color = 'black')\n",
     "            ax2.tick_params(axis='y', labelcolor = 'black')\n",
     "            axes[b, 2].legend(loc = legend_loc, fontsize = legendfonts)\n",
     "        \n",
@@ -1040,7 +1040,7 @@
     "        if i == 1:\n",
     "            fig.suptitle(location,fontsize = 18)\n",
     "        plt.subplots_adjust(top=0.9) \n",
-    "        plt.savefig(newpath + location+'_3plots_'+str(i))\n",
+    "        plt.savefig(newpath + location+'_3plots_'+str(i)+'.svg', format = 'svg')\n",
     "        i = i + 1\n",
     "\n",
     "    params_df = pd.DataFrame()\n",
@@ -1087,9 +1087,8 @@
     "\n",
     "    # # Display the plot\n",
     "    # plt.show()\n",
-    "    plt.savefig(newpath + location+'_param_table.png', bbox_inches='tight')\n",
-    "\n",
-    "    # break\n"
+    "    plt.savefig(newpath + location+'_param_table.svg', bbox_inches='tight', format='svg')\n",
+    "   \n"
    ]
   },
   {
@@ -1098,148 +1097,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "newpath"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# List to store each generated PDF's path\n",
-    "img_list = []\n",
-    "# Combine the figure and table into one PDF\n",
-    "def combine_images_into_pdf(image1, image2, image3, table_img, output_pdf_path):\n",
-    "    \n",
-    "    ## Plots combine\n",
-    "    # Get the maximum height of the images to align them vertically\n",
-    "    max_height = max(image1.height, image2.height, image3.height)\n",
-    "\n",
-    "    line_width = 2  # Adjust the line width as needed\n",
-    "    line_color = (0, 0, 0)  # Black color for the dividing line\n",
-    "\n",
-    "    # Calculate the combined width, accounting for the lines between images\n",
-    "    combined_width = image1.width + image2.width + image3.width + (2 * line_width)\n",
-    "\n",
-    "    combined_image = Image.new('RGB', (combined_width, max_height))\n",
-    "\n",
-    "    # Create a draw object to add lines\n",
-    "    draw = ImageDraw.Draw(combined_image)\n",
-    "\n",
-    "    # Calculate the offset for the line height\n",
-    "    line_height = int(max_height * 0.8)  # 80% of the image height\n",
-    "    vertical_offset = (max_height - line_height) // 2  # Center the line vertically\n",
-    "\n",
-    "    # Paste the first image\n",
-    "    combined_image.paste(image1, (0, 0))\n",
-    "\n",
-    "    # Draw the first dividing line between image1 and image2, with the offset height\n",
-    "    draw.line([(image1.width, vertical_offset), (image1.width, vertical_offset + line_height)], fill=line_color, width=line_width)\n",
-    "\n",
-    "    # Paste the second image after the first image and the line\n",
-    "    combined_image.paste(image2, (image1.width + line_width, 0))\n",
-    "\n",
-    "    # Draw the second dividing line between image2 and image3, with the offset height\n",
-    "    draw.line([(image1.width + image2.width + line_width, vertical_offset), (image1.width + image2.width + line_width, vertical_offset + line_height)], fill=line_color, width=line_width)\n",
-    "\n",
-    "    # Paste the third image after the second image and the line\n",
-    "    combined_image.paste(image3, (image1.width + image2.width + 2 * line_width, 0))\n",
-    "\n",
-    "    combined_image.show()\n",
-    "\n",
-    "    # Save the combined image\n",
-    "    # combined_image.save('combined_image.jpg')\n",
-    "    fig_img = combined_image\n",
-    "\n",
-    "    ## Combine plot and table\n",
-    "    # Determine the width and total height needed for the combined image\n",
-    "    max_width = max(fig_img.width, table_img.width)\n",
-    "    total_height = fig_img.height + table_img.height\n",
-    "\n",
-    "    # Create a blank image with the calculated dimensions\n",
-    "    combined_image = Image.new('RGB', (max_width, total_height), (255, 255, 255))\n",
-    "\n",
-    "    # Paste the figure and table images into the combined image\n",
-    "    combined_image.paste(fig_img, (0, 0))\n",
-    "    combined_image.paste(table_img, (0, fig_img.height))\n",
-    "    \n",
-    "    combined_image.save(output_pdf_path, \"PDF\", resolution=100.0)\n",
-    "\n",
-    "\n",
-    "output_pdf_paths = []\n",
-    "for location in location_list:\n",
-    "\n",
-    "    figure1 = Image.open(newpath + location + '_3plots_0.png')\n",
-    "    figure2 = Image.open(newpath + location + '_3plots_1.png')\n",
-    "    figure3 = Image.open(newpath + location + '_3plots_2.png')\n",
-    "    table = Image.open(newpath + location + '_param_table.png')\n",
-    "\n",
-    "    # Define the output PDF path\n",
-    "    output_pdf_path = newpath + location + '_param_fig_tbl.pdf'\n",
-    "    output_pdf_paths.append(output_pdf_path)\n",
-    "    \n",
-    "    # Combine and save images as a PDF\n",
-    "    combine_images_into_pdf(figure1, figure2, figure3, table, output_pdf_path)\n",
-    "    # break\n",
-    "\n",
-    "\n",
-    "\n",
-    "def combine_pdfs(pdf_list, output_path):\n",
-    "    pdf_writer = PdfWriter()\n",
-    "    for pdf in pdf_list:\n",
-    "        pdf_reader = PdfReader(pdf)\n",
-    "        for page_num in range(len(pdf_reader.pages)):\n",
-    "            page = pdf_reader.pages[page_num]\n",
-    "            pdf_writer.add_page(page)\n",
-    "    with open(output_path, 'wb') as output_pdf:\n",
-    "        pdf_writer.write(output_pdf)\n",
-    "\n",
-    "# Define the output combined PDF path\n",
-    "combined_output_pdf_path = newpath + '/supp_fig_tbl_combined.pdf'\n",
-    "\n",
-    "# Combine all the generated PDFs into a single PDF\n",
-    "combine_pdfs(output_pdf_paths, combined_output_pdf_path)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_pdf_paths = []\n",
-    "for location in location_list:\n",
-    "\n",
-    "    figure1 = Image.open(newpath + location + '_3plots_0.png')\n",
-    "    figure2 = Image.open(newpath + location + '_3plots_1.png')\n",
-    "    figure3 = Image.open(newpath + location + '_3plots_2.png')\n",
-    "    table = Image.open(newpath + location + '_param_table.png')\n",
-    "\n",
-    "    # Define the output PDF path\n",
-    "    output_pdf_path = newpath + location + '_param_fig_tbl.pdf'\n",
-    "    output_pdf_paths.append(output_pdf_path)\n",
-    "    \n",
-    "    # Combine and save images as a PDF\n",
-    "    combine_images_into_pdf(figure1, figure2, figure3, table, output_pdf_path)\n",
-    "\n",
-    "\n",
-    "def combine_pdfs(pdf_list, output_path):\n",
-    "    pdf_writer = PdfWriter()\n",
-    "    for pdf in pdf_list:\n",
-    "        pdf_reader = PdfReader(pdf)\n",
-    "        for page_num in range(len(pdf_reader.pages)):\n",
-    "            page = pdf_reader.pages[page_num]\n",
-    "            pdf_writer.add_page(page)\n",
-    "    with open(output_path, 'wb') as output_pdf:\n",
-    "        pdf_writer.write(output_pdf)\n",
-    "\n",
-    "# Define the output combined PDF path\n",
-    "combined_output_pdf_path = newpath + '/supp_fig_tbl_combined.pdf'\n",
-    "\n",
-    "# Combine all the generated PDFs into a single PDF\n",
-    "combine_pdfs(output_pdf_paths, combined_output_pdf_path)"
+    "pip install cairosvg"
    ]
   },
   {
@@ -1250,9 +1108,21 @@
    "source": [
     "from PIL import Image, ImageDraw\n",
     "from PyPDF2 import PdfReader, PdfWriter\n",
+    "import cairosvg\n",
+    "from io import BytesIO\n",
     "\n",
-    "# List to store each generated PDF's path\n",
-    "img_list = []\n",
+    "# Function to load and convert SVG to a format PIL can handle\n",
+    "def load_svg_as_image(svg_path):\n",
+    "    \"\"\"\n",
+    "    Load an SVG file and convert it to a PIL image.\n",
+    "    \"\"\"\n",
+    "    # Convert SVG to PNG format in memory\n",
+    "    png_image_data = cairosvg.svg2png(url=svg_path)\n",
+    "    \n",
+    "    # Open the PNG image data with PIL\n",
+    "    image = Image.open(BytesIO(png_image_data))\n",
+    "    \n",
+    "    return image\n",
     "\n",
     "# Combine the figure and table into one PDF\n",
     "def combine_images_into_pdf(image1, image2, image3, table_img, output_pdf_path):\n",
@@ -1311,7 +1181,7 @@
     "    combined_image.paste(table_img, (0, fig_img.height))\n",
     "    \n",
     "    # Save as PDF with specified resolution\n",
-    "    combined_image.save(output_pdf_path, \"PDF\", resolution=100.0)\n",
+    "    combined_image.save(output_pdf_path, \"PDF\", resolution=70.0)\n",
     "\n",
     "def compress_image(image):\n",
     "    \"\"\"\n",
@@ -1324,10 +1194,11 @@
     "output_pdf_paths = []\n",
     "for location in location_list:\n",
     "\n",
-    "    figure1 = Image.open(newpath + location + '_3plots_0.png')\n",
-    "    figure2 = Image.open(newpath + location + '_3plots_1.png')\n",
-    "    figure3 = Image.open(newpath + location + '_3plots_2.png')\n",
-    "    table = Image.open(newpath + location + '_param_table.png')\n",
+    "    # Load SVG files as images\n",
+    "    figure1 = load_svg_as_image(newpath + location + '_3plots_0.svg')\n",
+    "    figure2 = load_svg_as_image(newpath + location + '_3plots_1.svg')\n",
+    "    figure3 = load_svg_as_image(newpath + location + '_3plots_2.svg')\n",
+    "    table = load_svg_as_image(newpath + location + '_param_table.svg')\n",
     "\n",
     "    # Define the output PDF path\n",
     "    output_pdf_path = newpath + location + '_param_fig_tbl.pdf'\n",
