all supplementary pdf generation code included

--- a/covid_behavior_analysis_lean.ipynb
+++ b/covid_behavior_analysis_lean.ipynb
@@ -1531,9 +1531,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PDF created successfully at /Users/tamannaurmi/Documents/Research/behavior_covid/behavior_anom_and_mortality_hospit_cases_corr_lags/behavior_anom_and_mortality_hospit_cases_corr_lags_all_state.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from PIL import Image\n",
@@ -1548,6 +1556,10 @@
     "\n",
     "# Initialize a PDF\n",
     "pdf = FPDF(orientation='P', unit='mm', format='A4')  # A4 size page (210 x 297 mm)\n",
+    "\n",
+    "# Add Lato-Regular font from your library\n",
+    "pdf.add_font('Lato-Bold', '', '/Library/Fonts/Lato-Bold.ttf', uni=True)\n",
+    "pdf.add_font('Lato-Regular', '', '/Library/Fonts/Lato-Regular.ttf', uni=True)\n",
     "\n",
     "# Parameters for image layout\n",
     "image_width = 130  # Fixed width for each image (adjust based on your need)\n",
@@ -1585,7 +1597,7 @@
     "\n",
     "            # Add section title only on the first page\n",
     "            if first_page:\n",
-    "                pdf.set_font(\"Arial\", size=12, style='B')\n",
+    "                pdf.set_font(\"Lato-Bold\", size=12)\n",
     "                pdf.cell(0, 10, f\"8 State-level correlations between oscillations in behavior trends and disease severity metrics\", ln=True, align='L')\n",
     "                first_page = False  # Ensure this happens only on the first page\n",
     "\n",
@@ -1603,7 +1615,7 @@
     "\n",
     "        # Add text below each image (use multi_cell for text wrapping)\n",
     "        pdf.set_xy(x_center, y + image_height + 5)  # Set position for text below image\n",
-    "        pdf.set_font(\"Arial\", size=8)\n",
+    "        pdf.set_font(\"Lato-Bold\", size=8)\n",
     "        text = (f\"Figure S8.{figure_num} shows the 5 lagged correlations of oscillations in behavior trend with \"\n",
     "                f\"mortality (black), hospitalizations (gray), and cases (light gray) for {location}.\")\n",
     "        pdf.multi_cell(image_width, 5, text, align='L')  # multi_cell wraps text\n",
@@ -1612,7 +1624,7 @@
     "\n",
     "        # Add page number at the bottom-right of the page when two images are placed\n",
     "        if image_count % images_per_page == 0:\n",
-    "            pdf.set_font(\"Arial\", size=10)\n",
+    "            pdf.set_font(\"Lato-Regular\", size=10)\n",
     "            pdf.set_xy(-30, -38)  # Set the position for page number correctly\n",
     "            pdf.cell(0, 10, f\"{page_num}\", 0, 0, 'R')\n",
     "            page_num += 1  # Increment the page number\n",
