Add checkfiles for validation

--- a/covid_behavior_analysis_lean_check.ipynb
+++ b/covid_behavior_analysis_lean_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,27 +13,28 @@
     "from datetime import datetime, timedelta\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt4\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import circstd\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from matplotlib.backends.backend_pdf import PdfPages\n",
-    "from PyPDF2 import PdfMerger\n",
-    "from PIL import Image, ImageDraw\n",
+    "#from PyPDF2 import PdfMerger\n",
+    "#from PIL import Image, ImageDraw\n",
     "import io\n",
-    "from PyPDF2 import PdfWriter, PdfReader\n",
+    "#from PyPDF2 import PdfWriter, PdfReader\n",
     "\n",
     "\n",
-    "# path = os.getcwd()\n",
-    "path = '/Users/tamannaurmi/Documents/Research/behavior_covid'\n",
+    "path = os.getcwd()\n",
+    "datapath =  path + '/data/'\n",
+    "# path = '/Users/tamannaurmi/Documents/Research/behavior_covid'\n",
     "path_processed = path + '/data/processed'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,6 @@
     "\n",
     "    dt5['Province_State'] = dt1['Province_State']\n",
     "    dt6 = dt5.groupby('Province_State').sum().reset_index()\n",
-    "\n",
     "\n",
     "    dt7 = dt6.T[1:]\n",
     "    dt7['case_cnt_nat'] = dt7.apply(lambda row: sum(row), axis = 1)\n",
@@ -178,18 +178,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_processed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Avoiding contact with other people': 'Risk-averting',\n",
+       " 'Avoiding public or crowded places': 'Risk-averting',\n",
+       " 'Frequently washing hands': 'Risk-averting',\n",
+       " 'Wearing a face mask when outside of your home': 'Risk-averting',\n",
+       " 'Go to work': 'Risk-seeking',\n",
+       " 'Go to the gym': 'Risk-seeking',\n",
+       " 'Go visit a friend': 'Risk-seeking',\n",
+       " 'Go to a cafe, bar, or restaurant': 'Risk-seeking',\n",
+       " 'Go to a doctor or visit a hospital': 'Risk-seeking',\n",
+       " 'Go to church or another place of worship': 'Risk-seeking',\n",
+       " 'Take mass transit (e.g. subway, bus, or train)': 'Risk-seeking',\n",
+       " 'Been in a room with someone outside of household in the past 24 hours': 'Risk-seeking',\n",
+       " 'Been in a room with 5-10 people outside of household in the past 24 hours': 'Risk-seeking',\n",
+       " 'Been in a room with 11-50 people outside of household in the past 24 hours': 'Risk-seeking',\n",
+       " 'Been in a room with over 50 people outside of household in the past 24 hours': 'Risk-seeking'}"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Get processed data\n",
     "waves_interp = pd.read_csv(path_processed + '/processed_waves_with_gaps.csv')\n",
@@ -641,6 +657,326 @@
     "plt.savefig(newpath + filename_prefix + suffix +'.png', facecolor='white', bbox_inches='tight')\n",
     "# plt.savefig(newpath + filename_prefix + suffix +'shifted_line.png', facecolor='white', bbox_inches='tight')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lin_reg(x, y):\n",
+    "    '''\n",
+    "    Takes x and y and produces a regression, anomaly between observed and predicted values,\n",
+    "    the gradient and y-intercept and the regression line\n",
+    "    '''\n",
+    "    lr = LinearRegression()\n",
+    "    x = np.array(x[0:len(x)]).reshape(-1, 1)\n",
+    "    y = y.flatten()\n",
+    "\n",
+    "    model = lr.fit(x, y)\n",
+    "    y_pred = model.predict(x)\n",
+    "    model.r\n",
+    "    anomaly = y - y_pred\n",
+    "    m = model.coef_\n",
+    "    c = model.intercept_\n",
+    "    x_line = np.linspace(min(x)-((x[1]-x[0])), max(x), 20)\n",
+    "    y_line = m*x_line + c\n",
+    "\n",
+    "    return x, y, anomaly, m, c, x_line, y_line  \n",
+    "\n",
+    "\n",
+    "behavior = 'avoid_contact'\n",
+    "b = df[behavior].values\n",
+    "dates = df['end_date'].values\n",
+    "date_int = list(range(len(dates)))\n",
+    "date_int\n",
+    "date_int, b, ban, m, c, t_line, b_line = lin_reg(date_int, b)\n",
+    "ban"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = df['end_date'].values\n",
+    "date_int = list(range(len(dates)))\n",
+    "date_int, b, ban, m, c, t_line, b_line = lin_reg(date_int, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lin_reg(x, y):\n",
+    "    '''\n",
+    "    Takes x and y and produces a regression, anomaly between observed and predicted values,\n",
+    "    the gradient and y-intercept and the regression line\n",
+    "    '''\n",
+    "    lr = LinearRegression()\n",
+    "    x = np.array(x[0:len(x)]).reshape(-1, 1)\n",
+    "    y = y.flatten()\n",
+    "\n",
+    "    model = lr.fit(x, y)\n",
+    "    y_pred = model.predict(x)\n",
+    "    anomaly = y - y_pred\n",
+    "    m = model.coef_\n",
+    "    c = model.intercept_\n",
+    "    x_line = np.linspace(min(x)-((x[1]-x[0])), max(x), 20)\n",
+    "    y_line = m*x_line + c\n",
+    "    \n",
+    "    return x, y, anomaly, m, c, x_line, y_line  \n",
+    "\n",
+    "def lin_reg_lag(x, y, lag):\n",
+    "    '''\n",
+    "    Takes x and y and produces a regression \n",
+    "    anomaly between observed and predicted values\n",
+    "    at various lags between x an y,\n",
+    "    the gradient and y-intercept and the regression line\n",
+    "    '''\n",
+    "    lr = LinearRegression()\n",
+    "    x = np.array(x[0:len(x)]).reshape(-1, 1)\n",
+    "    y = y.flatten()\n",
+    "    if lag > 0:\n",
+    "        x_lag = x[lag:]\n",
+    "        y_lag = y[:lag]\n",
+    "    elif lag < 0:\n",
+    "        x_lag = x[:lag]\n",
+    "        y_lag = y[lag:]\n",
+    "\n",
+    "    model = lr.fit(x_lag, y_lag)\n",
+    "    y_pred = model.predict(x_lag)\n",
+    "    anomaly = y_lag - y_pred\n",
+    "    m = model.coef_\n",
+    "    c = model.intercept_\n",
+    "    x_line = np.linspace(min(x_lag), max(x_lag), 20)\n",
+    "    y_line = m*x_line + c\n",
+    "    \n",
+    "    return x_lag, y_lag, anomaly, m, c, x_line, y_line "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LinearRegression()\n",
+    "model.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(range(0, 27))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df['avoid_contact_lag0'].values, list(range(0, 27)), ban, m, c, t_line, b_line = lin_reg(t, b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checking the code for the corrplot\n",
+    "\n",
+    "df = pd.read_csv(\"data/behavior_severity.csv\")\n",
+    "\n",
+    "lags = [-2, -1, 0, 1, 2]\n",
+    "\n",
+    "interval = 30\n",
+    "location_list = \"National\" # Only checking using national-level data for now\n",
+    "\n",
+    "dlag_corr = pd.DataFrame()\n",
+    "dlag_corr.index = lags\n",
+    "hlag_corr = pd.DataFrame()\n",
+    "hlag_corr.index = lags\n",
+    "fig, ax = plt.subplots(figsize = (5, 7))\n",
+    "\n",
+    "dt_b_d = behave_dt[behave_dt['state'] == state_code][['Wave','new_ind', 'End_Date', behavior]].reset_index().drop('index', axis = 1)\n",
+    "dt_b_d = dt_b_d.merge(dt, how = 'left', on = ['Wave','new_ind', 'End_Date']).dropna()\n",
+    "dt_b_d['death_pct'] = dt_b_d[int_var]*100/cur_state_pop\n",
+    "\n",
+    "\n",
+    "b = dt_b_d[behavior].values\n",
+    "dates = dt_b_d['End_Date'].values\n",
+    "date_int = list(range(len(dates)))\n",
+    "t = date_int\n",
+    "t, b, ban, m, c, t_line, b_line = lin_reg(t, b)\n",
+    "dt_b_d['behavior_anomaly'] = ban\n",
+    "\n",
+    "dt_b_d = dt_b_d.rename(columns={'End_Date': 'end_date'})\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    \n",
+    "    if interval == 7:\n",
+    "        int_var = 'death_agg7'\n",
+    "    elif interval == 14:\n",
+    "        int_var = 'death_agg14'\n",
+    "    elif interval == 30:\n",
+    "        int_var = 'death_agg30'\n",
+    "    # print(location)\n",
+    "    if location == 'National':\n",
+    "        state_name = location\n",
+    "        cur_state_pop = 336997624\n",
+    "        state_code = 'National'\n",
+    "    elif len(location) == 2:\n",
+    "        state_name = code_to_state.get(location)\n",
+    "        cur_state_pop = state_pop[state_pop.NAME == state_name].POPESTIMATE2021.values[0]\n",
+    "        state_code = location\n",
+    "    else:\n",
+    "        state_name = location\n",
+    "        cur_state_pop = state_pop[state_pop.NAME == state_name].POPESTIMATE2021.values[0]\n",
+    "        state_code = state_to_code.get(location)\n",
+    "\n",
+    "    dt = death_agg_data[(death_agg_data.State == state_name)][['Wave','new_ind', 'End_Date', int_var]]\n",
+    "    \n",
+    "    dt_b_d = behave_dt[behave_dt['state'] == state_code][['Wave','new_ind', 'End_Date', behavior]].reset_index().drop('index', axis = 1)\n",
+    "    dt_b_d = dt_b_d.merge(dt, how = 'left', on = ['Wave','new_ind', 'End_Date']).dropna()\n",
+    "    dt_b_d['death_pct'] = dt_b_d[int_var]*100/cur_state_pop\n",
+    "    \n",
+    "    b = dt_b_d[behavior].values\n",
+    "    dates = dt_b_d['End_Date'].values\n",
+    "    date_int = list(range(len(dates)))\n",
+    "    t = date_int\n",
+    "    t, b, ban, m, c, t_line, b_line = lin_reg(t, b)\n",
+    "    dt_b_d['behavior_anomaly'] = ban\n",
+    "    \n",
+    "    dt_b_d = dt_b_d.rename(columns={'End_Date': 'end_date'})\n",
+    "\n",
+    "    return dt_b_d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df.loc[:, ['end_date', 'deaths', 'avoid_contact_lag0']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Do the lags and compute the correlations\n",
+    "\n",
+    "\n",
+    "df['end_date'] = pd.to_datetime(df['end_date'])\n",
+    "\n",
+    "# Define the behaviors you want to add lags and leads for\n",
+    "behaviors = df.columns[5:-1]  # Add other behaviors here as needed\n",
+    "\n",
+    "# Create a new DataFrame to store lags and leads\n",
+    "new_df = df[['wave', 'end_date', 'deaths', 'hosps', 'cases']].copy()  # Copy essential columns\n",
+    "\n",
+    "# For each behavior, create lag 2, lag 1, lead 0, lead 1, and lead 2 columns\n",
+    "for behavior in behaviors:\n",
+    "    new_df[f'{behavior}_lag2'] = df[behavior].shift(2)  # Lag by 2\n",
+    "    new_df[f'{behavior}_lag1'] = df[behavior].shift(1)  # Lag by 1\n",
+    "    new_df[f'{behavior}_lag0'] = df[behavior]           # No shift (current value)\n",
+    "    new_df[f'{behavior}_lead1'] = df[behavior].shift(-1) # Lead by 1\n",
+    "    new_df[f'{behavior}_lead2'] = df[behavior].shift(-2) # Lead by 2\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "residuals_df = df[['end_date', 'deaths']].copy()\n",
+    "residuals_df['date_index'] = residuals_df.reset_index().index\n",
+    "print(residuals_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df.columns[5:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "residuals_df = new_df[['end_date', 'deaths']].copy()\n",
+    "new_df['date_index'] =  new_df.reset_index().index\n",
+    "\n",
+    "# Perform linear regression for each behavior column\n",
+    "for behavior in new_df.columns[5:]:\n",
+    "    # Prepare data for regression\n",
+    "    x = new_df[behavior].values.reshape(-1, 1)\n",
+    "    y = new_df['date_index'].values\n",
+    "\n",
+    "    # Fit the model\n",
+    "    model = LinearRegression().fit(x, y)\n",
+    "    \n",
+    "    # Predict and calculate residuals\n",
+    "    y_pred = model.predict(x)\n",
+    "    residuals = y - y_pred\n",
+    "\n",
+    "    # Add residuals as a new column in the residuals_df\n",
+    "    residuals_df[f'{behavior}_residual'] = residuals\n",
+    "\n",
+    "# Display the resulting DataFrame with residuals\n",
+    "print(residuals_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1629,7 +1965,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
